default/objects/BR_Setting__c/BR_Setting__c.object-meta.xml
<CustomObject>
    <description>Settings for business regulations check</description>
    <label>BR Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BR Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>