default/objects/BR_Setting__c/fields/Is_active__c.field-meta.xml
<CustomField>
    <fullName>Is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is active</label>
    <type>Checkbox</type>
</CustomField>