default/objects/BR_Setting__c/fields/SObject_status__c.field-meta.xml
<CustomField>
    <fullName>SObject_status__c</fullName>
    <description>the sObject status for which the settings are applied</description>
    <inlineHelpText>the sObject status for which the settings are applied</inlineHelpText>
    <label>SObject status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Moved to start</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>